--- a/estilsOfertes.css
+++ b/estilsOfertes.css
@@ -2,7 +2,10 @@ table {
   border-collapse: collapse;
   width: 60%;
   margin: auto;
-  margin-top: 10%;
+  margin-top: 5%;
+}
+h2 {
+    margin-top: 10%;
 }
 .container {
   display: flex;
@@ -25,3 +28,17 @@ th, td {
 tr:hover {
   background-color: #f5f5f5;
 }
+
+.perfil-img {
+  width: 10px;
+  height: 10px;
+  border-radius: 10%;
+  overflow: hidden;
+}
+
+.perfil-img img {
+  width: 10%;
+  height: 10%;
+  object-fit: cover;
+}
+
